# IMDB-heatmap

./: README.md
backend/: .env  .gitignore  app.py  database.py  featured_shows.py  imdb_helpers.py  pyproject.toml  requirements.txt  server.py  services.py  show_manager.py  shows.db  utils.py  worker.py
backend/migrations/: 001_add_columns.sql
backend/shows/: __init__.py  show_enrich.py  show_helpers.py  show_ingest.py  show_refresh.py
backend/tests/: test_scraping.py
imdb-heatmap-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
imdb-heatmap-app/src/: App.css  App.jsx  DiscoverSection.jsx  EpisodeTooltip.jsx  Header.jsx  HeatMap.jsx  HeatmapChart.jsx  HeatmapLegend.jsx  Icon.jsx  RecentShows.jsx  SearchBar.jsx  ShowCard.jsx  ShowInfoSidebar.jsx  ShowRow.jsx  index.css  useFetchSeasonsData.js  useShowData.js
imdb-heatmap-app/src/components/: DiscoverSection.jsx  ErrorAlert.jsx  Footer.jsx  Header.jsx  HeatMap.jsx  HeatmapChart.jsx  RecentShows.jsx  SearchBar.jsx
imdb-heatmap-app/src/config/: api.js
imdb-heatmap-app/src/hooks/: useFetchSeasonsData.js  useShowData.js
imdb-heatmap-app/src/pages/: HomePage.jsx  ShowPage.jsx
